--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -22,6 +22,18 @@
     height: 100vh;
     padding: 0 50px;
   }
+  .order-now{
+    padding: 10px 26px;
+    color: white;
+    background-color: rgb(219, 48, 48);
+    border: none;
+    transition: all 0.3s ease-in;
+     
+    &:hover{
+      background-color: black;
+    }
+  
+  }
   
   .slider-left {
     width: 50%;
