--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -3,15 +3,16 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 25px;
     padding: 50px 0;
 }
 .menu-card{
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 390px;
     height: 500px;
-    border: 1px solid black;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     img{
         transition: all 0.3s ease;
         width: 100%;
@@ -19,6 +20,26 @@
     }
   
 }
+.menu-card:hover .delivery-badge {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+  .delivery-badge {
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    background-color: #d90429;
+    color: white;
+    padding: 12px 12px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    opacity: 0;
+    transform: translateY(-16px);
+    transition: all 0.3s ease;
+  }
+  
 .card-img{
     display: flex;
     align-items: center;
@@ -27,4 +48,20 @@
 }
 .menu-card:hover img{
     transform: scale(1.07);
+}
+.menu-card:hover{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.card-inf{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px 13px ;
+
+    p{
+        color: rgb(63, 62, 62);
+    }
+}
+.price{
+    color: rgb(177, 10, 10);
 }
